# mcp-server-pacman

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
pacman/: .pre-commit-config.yaml  LICENSE  pyproject.toml
pacman/src/: __init__.py  server.py
pacman/src/mcp_server_pacman/: __init__.py  __main__.py  server.py
pacman/tests/: conftest.py  test_integration.py  test_server.py
src/mcp_server_pacman/: server.py
src/mcp_server_pacman/models/: __init__.py  package_models.py
src/mcp_server_pacman/providers/: __init__.py  terraform.py
tests/: test_docker.py  test_docker_integration.py
tests/integration/: test_terraform_integration.py
tests/providers/: test_terraform.py
