[project]
name = "mcp-server-pacman"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to query package indices like PyPI, npm, and crates.io"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name Here" }]
keywords = ["pypi", "npm", "crates", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx<0.28",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-pacman = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]